# ROS-Tutorial

./: .gitignore
firmware/motor_driver/src/: main.cpp
firmware/test_example/: platformio.ini
firmware/test_example/src/: main.cpp
src/my_bot/: package.xml  setup.py
src/my_bot/config/: gz_bridge.yaml  joystick.yaml  my_controllers.yaml
src/my_bot/description/: gazebo_control.xacro  inertial_macros.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_bot/launch/: gazebo.launch.py  joystick.launch.py  launch_sim.launch.py  robot_state_publisher_launch.py  rsp.launch.py
src/my_bot/worlds/: obstacles.world
